fix: - player movement saves direction state - added white space suit

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,9 +1,15 @@
+body{
+    background-color: #222;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .game-ui {
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color: black;
     border: 1px solid black;
     bottom: 0;
     left: 0;
-    padding: 32px;
     position: absolute;
     width: 100%;
 }
